fix compilation (make sure to remove debug symbols when building the prod sys)
Signed-off-by: Finn Roblin <finnrobl@amazon.com>

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,12 @@ application {
     applicationDefaultJvmArgs = ["-Djava.library.path=${projectDir}/jni/release"]
 }
 
+// C++ test task
+tasks.register('runCppTest', Exec) {
+    workingDir = "${projectDir}/jni/build"
+    commandLine './faiss_test'
+}
+
 // Test tasks use test source set
 tasks.register('runKMeansTest', JavaExec) {
     classpath = sourceSets.test.runtimeClasspath
