--- a/build.gradle
+++ b/build.gradle
@@ -19,89 +19,14 @@ dependencies {
     implementation 'org.apache.lucene:lucene-core:10.3.2'
     implementation 'org.apache.lucene:lucene-misc:10.3.2'
     implementation 'org.apache.lucene:lucene-codecs:10.3.2'
-    
-    // OpenSearch core for StreamInput/StreamOutput (quantization state deserialization)
     implementation 'org.opensearch:opensearch:3.4.0'
-    
-    // Guava for k-NN
     implementation 'com.google.guava:guava:33.0.0-jre'
-    
-    // k-NN codec and dependencies for reading indexes created with KNN codec
     implementation fileTree(dir: 'libs', include: '*.jar')
 }
 
 application {
     mainClass = 'org.opensearch.knn.reorder.VectorReorder'
     applicationDefaultJvmArgs = ["-Djava.library.path=${projectDir}/jni/release"]
-}
-
-// C++ test task
-tasks.register('runCppTest', Exec) {
-    workingDir = "${projectDir}/jni/build"
-    commandLine './faiss_test'
-}
-
-// Test tasks use test source set
-tasks.register('runKMeansTest', JavaExec) {
-    classpath = sourceSets.test.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.KMeansTest'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release"]
-}
-
-tasks.register('runClusterSortTest', JavaExec) {
-    classpath = sourceSets.test.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.ClusterSortTest'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release"]
-}
-
-tasks.register('runFaissPermuterTest', JavaExec) {
-    classpath = sourceSets.test.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.FaissFilePermuterTest'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release"]
-    workingDir = projectDir
-}
-
-tasks.register('testRebuild', JavaExec) {
-    classpath = sourceSets.test.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.FaissIndexRebuilderTest'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release"]
-    workingDir = projectDir
-}
-
-tasks.register('testBpReorder', JavaExec) {
-    classpath = sourceSets.test.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.BpReordererTest'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release", "-Xmx8g"]
-    workingDir = projectDir
-}
-
-tasks.register('verifyIdMapping', JavaExec) {
-    classpath = sourceSets.test.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.VerifyIdMapping'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release"]
-    workingDir = projectDir
-}
-
-// Utility tasks
-tasks.register('parseFaiss', JavaExec) {
-    classpath = sourceSets.main.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.FaissFilePermuter'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release"]
-    args = project.hasProperty('faissFile') ? [project.faissFile, 'parse'] : ['raw_test_files/_z_165_train.faiss', 'parse']
-    workingDir = projectDir
-}
-
-// Reorder tool - usage: ./gradlew reorder -PvecFile=<path> -PoutputFaiss=<path> -PoutputVec=<path> [-Pclusters=1000]
-tasks.register('reorder', JavaExec) {
-    classpath = sourceSets.main.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.ReorderTool'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release", "-Xmx8g"]
-    args = [
-        project.findProperty('vecFile') ?: '',
-        project.findProperty('outputFaiss') ?: '',
-        project.findProperty('outputVec') ?: '',
-        project.findProperty('clusters') ?: '1000'
-    ]
 }
 
 // K-means reorder - usage: ./gradlew kmeansReorder -Pvec=file1.vec,file2.vec [-Pfaiss=file1.faiss,file2.faiss] [-Pspace=l2] [-PefSearch=100] [-PefConstruction=100] [-Pm=16]
@@ -123,31 +48,17 @@ tasks.register('kmeansReorder', JavaExec) {
     }
 }
 
-// E2E script - usage: ./gradlew runE2E -PindexDir=<path> [-Pclusters=1000]
-tasks.register('runE2E', JavaExec) {
-    classpath = sourceSets.main.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.E2EReorderScript'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release", "-Xmx8g"]
-    args = [
-        project.findProperty('indexDir') ?: '',
-        project.findProperty('clusters') ?: '1000'
-    ]
-}
-
-// BP reorder tool - usage: ./gradlew bpReorder -Pvec=file1.vec,file2.vec [-Pfaiss=file1.faiss,file2.faiss] [-Pspace=l2] [-PefSearch=100] [-PefConstruction=100] [-Pm=16]
+// BP reorder - usage: ./gradlew bpReorder -Pvec=file1.vec,file2.vec [-Pfaiss=file1.faiss,file2.faiss] [-Pspace=l2] [-PefSearch=100] [-PefConstruction=100] [-Pm=16]
 tasks.register('bpReorder', JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
     mainClass = 'org.opensearch.knn.reorder.BpReorderTool'
     jvmArgs = ["-Djava.library.path=${projectDir}/jni/release", "-Xmx8g"]
     doFirst {
         def argList = ['bp-reorder']
-        // Parse comma-separated vec files
         def vecFiles = (project.findProperty('vec') ?: '').split(',').findAll { it }
         vecFiles.each { argList += ['--vec', it] }
-        // Parse comma-separated faiss files (optional)
         def faissFiles = (project.findProperty('faiss') ?: '').split(',').findAll { it }
         faissFiles.each { argList += ['--faiss', it] }
-        // HNSW params
         if (project.hasProperty('space')) argList += ['--space', project.space]
         if (project.hasProperty('efSearch')) argList += ['--ef-search', project.efSearch]
         if (project.hasProperty('efConstruction')) argList += ['--ef-construction', project.efConstruction]
@@ -156,142 +67,7 @@ tasks.register('bpReorder', JavaExec) {
     }
 }
 
-// BP reorder raw_test_files to bp_files
-tasks.register('bpReorderRaw', JavaExec) {
-    classpath = sourceSets.main.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.BpReorderTool'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release", "-Xmx8g"]
-    doFirst {
-        file("${projectDir}/bp_files").mkdirs()
-    }
-    args = [
-        "${projectDir}/raw_test_files/_z_NativeEngines990KnnVectorsFormat_0.vec",
-        "${projectDir}/raw_test_files/_z_165_train.faiss",
-        "${projectDir}/bp_files/_z_165_train.faiss",
-        "${projectDir}/bp_files/_z_NativeEngines990KnnVectorsFormat_0.vec"
-    ]
-}
-
-
-// Verify reorder correctness
-tasks.register('verifyReorder', JavaExec) {
-    classpath = sourceSets.main.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.VerifyReorder'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release", "-Xmx8g"]
-    workingDir = projectDir
-}
-
-
-// Query FAISS index verification
-tasks.register('queryFaiss', JavaExec) {
-    classpath = sourceSets.main.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.QueryFaissIndex'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release", "-Xmx8g"]
-    workingDir = projectDir
-}
-
-
-// Parse .vemf metadata file
-tasks.register('parseVemf', JavaExec) {
-    classpath = sourceSets.main.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.ParseVemf'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release"]
-    args = project.hasProperty('vemfFile') ? [project.vemfFile] : []
-    workingDir = projectDir
-}
-
-
-// Check ID mapping
-tasks.register('checkIdMapping', JavaExec) {
-    classpath = sourceSets.main.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.CheckIdMapping'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release"]
-    workingDir = projectDir
-}
-
-
-// Check pre-BP FAISS ID mapping
-tasks.register('checkPreBP', JavaExec) {
-    classpath = sourceSets.main.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.CheckPreBP'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release"]
-    workingDir = projectDir
-}
-
-
-tasks.register('debugMapping', JavaExec) {
-    classpath = sourceSets.main.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.DebugMapping'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release"]
-    workingDir = projectDir
-}
-
-
-// Test VemfFileIO
-tasks.register('testVemf', JavaExec) {
-    classpath = sourceSets.test.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.VemfFileIOTest'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release"]
-    workingDir = projectDir
-}
-
-
-// BP segment reorder - usage: ./gradlew bpSegmentReorder -PindexPath=<path> -PvectorField=<field> -PoutputPath=<path> [-PfaissPath=<path>] [-PqstatePath=<path>] [-Pthreads=N]
-tasks.register('bpSegmentReorder', JavaExec) {
-    classpath = sourceSets.main.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.BpSegmentReorderer'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release", "-Xmx8g"]
-    doFirst {
-        def argList = [
-            project.findProperty('indexPath') ?: '',
-            project.findProperty('vectorField') ?: '',
-            project.findProperty('outputPath') ?: ''
-        ]
-        if (project.hasProperty('faissPath')) {
-            argList += ['--faiss', project.faissPath]
-        }
-        if (project.hasProperty('qstatePath')) {
-            argList += ['--qstate', project.qstatePath]
-        }
-        argList += ['--threads', project.findProperty('threads') ?: Runtime.getRuntime().availableProcessors().toString()]
-        args = argList.findAll { it != '' }
-    }
-}
-
-
-// Test QuantizationStateIO
-tasks.register('testQuantization', JavaExec) {
-    classpath = sourceSets.test.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.QuantizationStateIOTest'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release"]
-    workingDir = projectDir
-}
-
-
-// E2E BP reorder - usage: ./gradlew e2eBpReorder -PsegmentDir=<path> -PvectorField=<field> -PoutputDir=<path> [-Pthreads=N]
-tasks.register('e2eBpReorder', JavaExec) {
-    classpath = sourceSets.main.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.E2EBpReorder'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release", "-Xmx8g"]
-    args = [
-        project.findProperty('segmentDir') ?: '',
-        project.findProperty('vectorField') ?: '',
-        project.findProperty('outputDir') ?: '',
-        project.findProperty('threads') ?: Runtime.getRuntime().availableProcessors().toString()
-    ].findAll { it != '' }
-}
-
-
-// Test BpSegmentReorderer
-tasks.register('testBpSegmentReorder', JavaExec) {
-    classpath = sourceSets.test.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.BpSegmentReordererTest'
-    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release", "-Xmx2g"]
-    workingDir = projectDir
-}
-
-
-// Test VectorReorder multi-file clustering
+// Test tasks
 tasks.register('testKmeansReorder', JavaExec) {
     classpath = sourceSets.test.runtimeClasspath
     mainClass = 'org.opensearch.knn.reorder.VectorReorderTest'
@@ -299,16 +75,21 @@ tasks.register('testKmeansReorder', JavaExec) {
     workingDir = projectDir
 }
 
-
-// Sorting BP reorder using SortingCodecReader
-// Usage: ./gradlew sortingBpReorder -PsrcDir=<path> -PdstDir=<path> -PvectorField=<field>
-tasks.register('sortingBpReorder', JavaExec) {
-    classpath = sourceSets.main.runtimeClasspath
-    mainClass = 'org.opensearch.knn.reorder.SortingBpReorder'
+tasks.register('testBpReorder', JavaExec) {
+    classpath = sourceSets.test.runtimeClasspath
+    mainClass = 'org.opensearch.knn.reorder.BpReordererTest'
     jvmArgs = ["-Djava.library.path=${projectDir}/jni/release", "-Xmx8g"]
-    args = [
-        project.findProperty('srcDir') ?: '',
-        project.findProperty('dstDir') ?: '',
-        project.findProperty('vectorField') ?: ''
-    ]
+    workingDir = projectDir
+}
+
+tasks.register('runKMeansTest', JavaExec) {
+    classpath = sourceSets.test.runtimeClasspath
+    mainClass = 'org.opensearch.knn.reorder.KMeansTest'
+    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release"]
+}
+
+tasks.register('runClusterSortTest', JavaExec) {
+    classpath = sourceSets.test.runtimeClasspath
+    mainClass = 'org.opensearch.knn.reorder.ClusterSortTest'
+    jvmArgs = ["-Djava.library.path=${projectDir}/jni/release"]
 }
